--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,16 @@
         }
     ],
     "require": {
-        "php": "^7.2.5|^8.0",
-        "illuminate/support": "^5.8|^6|^7|^8",
-        "illuminate/console": "^5.8|^6|^7|^8",
-        "guzzlehttp/guzzle": "^6.5|^7",
-        "geoip2/geoip2": "^2.11"
+        "php": "^8.0",
+        "illuminate/support": "^v8",
+        "illuminate/console": "^v8",
+        "guzzlehttp/guzzle": "^7",
+        "geoip2/geoip2": "^v2.12"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0|^9.0",
-        "mockery/mockery": "^1.2.3"
+        "phpunit/phpunit": "^9",
+        "mockery/mockery": "^1.4",
+        "friendsofphp/php-cs-fixer": "^v3"
     },
     "autoload": {
         "psr-4": {
