Add Auto Release Workflow and Changelog
Signed-off-by: Nuno Souto <nsouto@lostlink.net>

--- a/.github/workflows/run-tests-L8.yml
+++ b/.github/workflows/run-tests-L8.yml
@@ -1,10 +1,9 @@
-name: "Run Tests - Current"
+name: Run Tests
 
 on: [push]
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
